DPNG-3653 : Fixed textwrap for very long space name

--- a/app/ui/app/manageusers/manageusers.scss
+++ b/app/ui/app/manageusers/manageusers.scss
@@ -113,6 +113,7 @@
   margin-bottom: 20px;
 
   .space-list-item {
+    word-break: break-word;
     padding-right: 30px;
     a {
       position: absolute;
